fixed horizontal scrolling, margin of photo-grid

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,4 @@
 .cover__background {
-    max-width: 1184px;
     min-height: 740px;
     background-image: url("../../../images/cover-trains.jpg");
     background-position: center;
@@ -36,8 +35,9 @@
 
 @media (max-width: 1279px) {
     .cover__background {
+        width: 100%;
         min-height: 640px;
-        padding: 195px 232px;
+        padding: 195px 312px;
     }
 }
 
