--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
     display: flex;
     justify-content: center;
-    padding: 0 48px;
+    padding: 0 16px;
     margin-bottom: 92px;
 }
 
