--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     max-width: 1184px;
     margin: 0 auto;
-    padding: 0 48px;
+    padding: 0;
     display: flex;
     justify-content: space-between;
     font-weight: 400;
