--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,5 @@
 .intro {
-    padding-left: 148px;
+    padding: 0 0 0 148px;
     margin: 0 0 92px;
     max-width: 690px;
     display: flex;
