--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     font-family: 'Inter', Arial, sans-serif;
     background-color: #2A2C2F;
-    width: 100vw;
     color: white;
     padding: 28px 0 24px;
 }
